# usc-hid-light

./: .editorconfig  .gitignore  CMakeLists.txt  GenerateWin64ProjectFiles 2019.bat  LightPlugin.h  main.c
.github/workflows/: build.yml
src/: main.c
