cmake_minimum_required(VERSION 3.5.1)
project(hidlights)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
include_directories(hidapi/hidapi)
add_library(usc-hid SHARED src/main.c hidapi/windows/hid.c)
target_include_directories(usc-hid PRIVATE include)
target_link_libraries(usc-hid hid setupapi)
